boreal/tests/assets/invalid_files/compilation/invalid_identifier_type4.yar
// [error: invalid identifier type]
import "math"

rule c {
    condition:
        math() == /aab/
}
